publish new stats

--- a/index.html
+++ b/index.html
@@ -15,12 +15,27 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-ackermann.html'>ackermann</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-ary.html'>ary</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-BasicPerson.html'>BasicPerson</a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='reports/BytecodeReport-BasicPersonScript.html'>BasicPersonScript</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-binarytrees.html'>binarytrees</a>
             </td>
           </tr>
           <tr>
@@ -35,6 +50,16 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-fannkuch.html'>fannkuch</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-fibo.html'>fibo</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-ForLoop.html'>ForLoop</a>
             </td>
           </tr>
@@ -45,12 +70,47 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-mandelbrot.html'>mandelbrot</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-nsieve.html'>nsieve</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-Person.html'>Person</a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html'>PersonScriptWithMetaClassMethodOnObject</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-random.html'>random</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-recursive.html'>recursive</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-regexdna.html'>regexdna</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-revcomp.html'>revcomp</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-spectralnorm.html'>spectralnorm</a>
             </td>
           </tr>
           <tr>
@@ -66,6 +126,16 @@
           <tr>
             <td>
               <a href='reports/BytecodeReport-TestExampleMultiAssignment.html'>TestExampleMultiAssignment</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-threadring.html'>threadring</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-wordfreq.html'>wordfreq</a>
             </td>
           </tr>
         </table>
