--- a/reports/BytecodeReport-CollectLoop.html
+++ b/reports/BytecodeReport-CollectLoop.html
@@ -29,6 +29,34 @@ results
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>104</td>
+          <td>88</td>
+          <td>86</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>100</td>
+          <td>84</td>
+          <td>82</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>4</td>
+          <td>4</td>
+          <td>4</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
