--- a/reports/BytecodeReport-EachLoop.html
+++ b/reports/BytecodeReport-EachLoop.html
@@ -29,6 +29,34 @@ numbers.each {
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>108</td>
+          <td>94</td>
+          <td>93</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>104</td>
+          <td>90</td>
+          <td>89</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>4</td>
+          <td>4</td>
+          <td>4</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
