--- a/reports/BytecodeReport-HelloWorld.html
+++ b/reports/BytecodeReport-HelloWorld.html
@@ -25,6 +25,34 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>72</td>
+          <td>58</td>
+          <td>59</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>72</td>
+          <td>58</td>
+          <td>59</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
