--- a/reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html
+++ b/reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html
@@ -36,6 +36,34 @@ p.fullName
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>119</td>
+          <td>97</td>
+          <td>33</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>115</td>
+          <td>93</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>4</td>
+          <td>4</td>
+          <td>N/A</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
