--- a/reports/BytecodeReport-TestExampleIfElse.html
+++ b/reports/BytecodeReport-TestExampleIfElse.html
@@ -38,6 +38,34 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>157</td>
+          <td>132</td>
+          <td>136</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>155</td>
+          <td>130</td>
+          <td>130</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>2</td>
+          <td>2</td>
+          <td>6</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
