--- a/reports/BytecodeReport-TestExampleMultiAssignment.html
+++ b/reports/BytecodeReport-TestExampleMultiAssignment.html
@@ -30,6 +30,34 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>120</td>
+          <td>116</td>
+          <td>116</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>112</td>
+          <td>108</td>
+          <td>108</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>8</td>
+          <td>8</td>
+          <td>8</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
