--- a/reports/BytecodeReport-BasicPerson.html
+++ b/reports/BytecodeReport-BasicPerson.html
@@ -32,6 +32,34 @@ p.last = 'Strater'
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>96</td>
+          <td>80</td>
+          <td>77</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>92</td>
+          <td>76</td>
+          <td>71</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>4</td>
+          <td>4</td>
+          <td>6</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
