--- a/reports/BytecodeReport-Person.html
+++ b/reports/BytecodeReport-Person.html
@@ -28,6 +28,34 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>122</td>
+          <td>120</td>
+          <td>120</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>120</td>
+          <td>118</td>
+          <td>118</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>2</td>
+          <td>2</td>
+          <td>2</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
