--- a/reports/BytecodeReport-TestExample.html
+++ b/reports/BytecodeReport-TestExample.html
@@ -29,6 +29,34 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-10 text-center col-sm-offset-1'>
+      <table class='table'>
+        <tr>
+          <th></th>
+          <th>Groovyc</th>
+          <th>Indy</th>
+          <th>Static</th>
+        </tr>
+        <tr>
+          <td>Lines Before</td>
+          <td>104</td>
+          <td>100</td>
+          <td>100</td>
+        </tr>
+        <tr>
+          <td>Lines After</td>
+          <td>102</td>
+          <td>98</td>
+          <td>98</td>
+        </tr>
+        <tr>
+          <td>Lines Removed</td>
+          <td>2</td>
+          <td>2</td>
+          <td>2</td>
+        </tr>
+      </table>
+    </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
     </div>
