add updated reports

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
           </tr>
           <tr>
             <td>
-              <a href='reports/BytecodeReport-CollectLoop.html'>CollectLoop</a>
+              <a href='reports/BytecodeReport-collectloop.html'>collectloop</a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href='reports/BytecodeReport-EachLoop.html'>EachLoop</a>
+              <a href='reports/BytecodeReport-eachloop.html'>eachloop</a>
             </td>
           </tr>
           <tr>
@@ -60,7 +60,7 @@
           </tr>
           <tr>
             <td>
-              <a href='reports/BytecodeReport-ForLoop.html'>ForLoop</a>
+              <a href='reports/BytecodeReport-forloop.html'>forloop</a>
             </td>
           </tr>
           <tr>
@@ -85,12 +85,22 @@
           </tr>
           <tr>
             <td>
+              <a href='reports/BytecodeReport-PersonScript.html'>PersonScript</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <a href='reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html'>PersonScriptWithMetaClassMethodOnObject</a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='reports/BytecodeReport-random.html'>random</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-ratpack.html'>ratpack</a>
             </td>
           </tr>
           <tr>
