--- a/reports/BytecodeReport-BasicPersonScript.html
+++ b/reports/BytecodeReport-BasicPersonScript.html
@@ -32,7 +32,7 @@ p.last = 'Strater'
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -59,6 +59,32 @@ p.last = 'Strater'
           <td>6</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: null</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>418</td>
+            <td>472</td>
+            <td>398</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>418</td>
+            <td>444</td>
+            <td>348</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
