--- a/reports/BytecodeReport-HelloWorld.html
+++ b/reports/BytecodeReport-HelloWorld.html
@@ -25,7 +25,7 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -52,6 +52,32 @@
           <td>0</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: null</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>392</td>
+            <td>419</td>
+            <td>330</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>393</td>
+            <td>422</td>
+            <td>332</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
