--- a/reports/BytecodeReport-ary.html
+++ b/reports/BytecodeReport-ary.html
@@ -49,7 +49,7 @@ public class ary {
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -76,6 +76,55 @@ public class ary {
           <td>32</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 10</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>423</td>
+            <td>509</td>
+            <td>327</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>400</td>
+            <td>556</td>
+            <td>331</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 100</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>410</td>
+            <td>616</td>
+            <td>332</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>402</td>
+            <td>620</td>
+            <td>336</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
