--- a/reports/BytecodeReport-fannkuch.html
+++ b/reports/BytecodeReport-fannkuch.html
@@ -112,7 +112,7 @@ def fannkuch(int n) {
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -139,6 +139,78 @@ def fannkuch(int n) {
           <td>N/A</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 1</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>422</td>
+            <td>481</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>422</td>
+            <td>480</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 2</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>419</td>
+            <td>508</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>420</td>
+            <td>509</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 3</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>424</td>
+            <td>515</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>425</td>
+            <td>511</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
