--- a/reports/BytecodeReport-mandelbrot.html
+++ b/reports/BytecodeReport-mandelbrot.html
@@ -69,7 +69,7 @@ System.out.write(pbm_data, 0, pos)
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -96,6 +96,55 @@ System.out.write(pbm_data, 0, pos)
           <td>N/A</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 1</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>420</td>
+            <td>481</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>420</td>
+            <td>481</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: 10</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>445</td>
+            <td>550</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>443</td>
+            <td>554</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
