--- a/reports/BytecodeReport-Person.html
+++ b/reports/BytecodeReport-Person.html
@@ -28,7 +28,7 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -55,6 +55,32 @@
           <td>2</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: null</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>114</td>
+            <td>115</td>
+            <td>114</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>113</td>
+            <td>112</td>
+            <td>114</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
