--- a/reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html
+++ b/reports/BytecodeReport-PersonScriptWithMetaClassMethodOnObject.html
@@ -36,7 +36,7 @@ p.fullName
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -63,6 +63,32 @@ p.fullName
           <td>N/A</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: null</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>451</td>
+            <td>445</td>
+            <td>N/A</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>398</td>
+            <td>425</td>
+            <td>N/A</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
