--- a/reports/BytecodeReport-TestExampleIfElse.html
+++ b/reports/BytecodeReport-TestExampleIfElse.html
@@ -38,7 +38,7 @@
 </code>
       </pre>
     </div>
-    <div class='row col-sm-10 text-center col-sm-offset-1'>
+    <div class='row col-sm-8 text-center col-sm-offset-3'>
       <table class='table'>
         <tr>
           <th></th>
@@ -65,6 +65,32 @@
           <td>6</td>
         </tr>
       </table>
+    </div>
+    <div class='row col-sm-12 text-center'>
+      <h2>Benchmarks</h2>
+      <div class='col-sm-4 text-center'>
+        <h3>For parameter: null</h3>
+        <table class='table'>
+          <tr>
+            <th></th>
+            <th>Groovyc</th>
+            <th>Indy</th>
+            <th>Static</th>
+          </tr>
+          <tr>
+            <td>Benchmark - Before</td>
+            <td>402</td>
+            <td>446</td>
+            <td>310</td>
+          </tr>
+          <tr>
+            <td>Benchmark - After</td>
+            <td>400</td>
+            <td>447</td>
+            <td>318</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <div class='row col-sm-12'>
       <h1>BEFORE</h1>
